Fixed scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,6 @@ body {
 }
 
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #5a5a5a #212529;
   scroll-behavior: smooth;
 }
 
@@ -31,25 +29,16 @@ option {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+/* Scrollbar general appearance */
 ::-webkit-scrollbar {
   max-width: 10px;
   max-height: 8px;
-}
-
-/* Set the style for the scrollbar track */
-::-webkit-scrollbar-track-piece {
-  /* background-color: white; */
-}
-
-::-moz-scrollbar-track {
-  /* background-color: white; */
 }
 
 body::-webkit-scrollbar-track {
   background-color: #212529;
 }
 
-/* Set the style for the scrollbar thumb */
 ::-webkit-scrollbar-thumb {
   background-color: #909090;
   border-radius: 10px;
@@ -66,6 +55,18 @@ body::-webkit-scrollbar-track {
 
 *::-moz-scrollbar-thumb:hover {
   background-color: #5a5a5a;
+}
+
+/* Set scrollbar appearance for Firefox */
+@supports(-moz-appearance: none){
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #909090 #212529;
+  }
+
+  .content * {
+    scrollbar-color: #909090 transparent !important;
+  }
 }
 
 /* Override FlowBite styles */
